tests/ui/impl-trait/issues/issue-100075.stderr
error[E0720]: cannot resolve opaque type
  --> $DIR/issue-100075.rs:13:37
   |
LL | fn _g<T>(t: &'static T) -> &'static impl Marker {
   |                                     ^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0720`.
